test_error.txt
   Compiling dsaengine v0.1.0 (C:\dsaengine)
error[E0433]: failed to resolve: could not find `arrays_strings` in `skills`
  --> tests\kadanes_algorithm_test.rs:1:24
   |
1  | use dsaengine::skills::arrays_strings::kadanes_algorithm::KadanesAlgorithm;
   |                        ^^^^^^^^^^^^^^ could not find `arrays_strings` in `skills`
   |
note: found an item that was configured out
  --> C:\dsaengine\src\skills\mod.rs:11:9
   |
11 | pub mod arrays_strings;
   |         ^^^^^^^^^^^^^^
note: the item is gated behind the `arrays` feature
  --> C:\dsaengine\src\skills\mod.rs:10:7
   |
10 | #[cfg(feature = "arrays")]
   |       ^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0433`.
error: could not compile `dsaengine` (test "kadanes_algorithm_test") due to 1 previous error
